// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegisterForm render snapshots 📸 Register should match snap shot 1`] = `
<div
  className="register__container"
>
  <div
    className="hidden__div"
  />
  <img
    alt="character logo"
    className="character__icon__image"
    src="./billSnapIcon.png"
  />
  <form
    className=""
  >
    <div
      className="form__inputs"
    >
      <div
        className="form-group"
        onChange={[MockFunction]}
      >
        <input
          autoComplete="first-name"
          className="register__login__inputs form-control"
          id="firstName"
          name="firstName"
          placeholder="First name"
          type="text"
        />
      </div>
      <div
        className="form-group"
        onChange={[MockFunction]}
      >
        <input
          autoComplete="last-name"
          className="register__login__inputs form-control"
          id="lastName"
          name="lastName"
          placeholder="Last name"
          type="text"
        />
      </div>
      <div
        className="form-group"
        onChange={[MockFunction]}
      >
        <input
          autoComplete="username"
          className="register__login__inputs form-control"
          id="email"
          name="email"
          placeholder="Email"
          type="email"
        />
      </div>
      <div
        className="form-group"
        onChange={[MockFunction]}
      >
        <input
          autoComplete="new-password"
          className="register__login__inputs form-control"
          id="password"
          name="password"
          placeholder="Password"
          type="password"
        />
      </div>
      <div
        className="form-group"
        onChange={[MockFunction]}
      >
        <input
          autoComplete="new-password"
          className="register__login__inputs form-control"
          id="confirmPassword"
          name="confirmPassword"
          placeholder="Confirm password"
          type="password"
        />
      </div>
    </div>
    <div
      className="form-group"
    >
      <button
        className="login_register__submit__button btn btn-primary btn-md btn-pill"
        name="submit"
        onClick={[Function]}
        type="button"
      >
        Submit
      </button>
    </div>
  </form>
  <div>
    <div
      className="form__seperator"
    >
      <hr
        className="form__horizontal__line"
      />
      Or
      <hr
        className="form__horizontal__line"
      />
    </div>
    <div>
      <h6>
        Have an account?
      </h6>
      <button
        className="form__toggle btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        👋 Log in to your account.
      </button>
    </div>
  </div>
</div>
`;

exports[`RegisterForm render snapshots 📸 RegisterFormContainer should match snap shot 1`] = `
<div
  className="register__container"
>
  <div
    className="hidden__div"
  />
  <img
    alt="character logo"
    className="character__icon__image"
    src="./billSnapIcon.png"
  />
  <form
    className=""
  >
    <div
      className="form__inputs"
    >
      <div
        className="form-group"
        onChange={[Function]}
      >
        <input
          autoComplete="first-name"
          className="register__login__inputs form-control"
          id="firstName"
          name="firstName"
          placeholder="First name"
          type="text"
        />
      </div>
      <div
        className="form-group"
        onChange={[Function]}
      >
        <input
          autoComplete="last-name"
          className="register__login__inputs form-control"
          id="lastName"
          name="lastName"
          placeholder="Last name"
          type="text"
        />
      </div>
      <div
        className="form-group"
        onChange={[Function]}
      >
        <input
          autoComplete="username"
          className="register__login__inputs form-control"
          id="email"
          name="email"
          placeholder="Email"
          type="email"
        />
      </div>
      <div
        className="form-group"
        onChange={[Function]}
      >
        <input
          autoComplete="new-password"
          className="register__login__inputs form-control"
          id="password"
          name="password"
          placeholder="Password"
          type="password"
        />
      </div>
      <div
        className="form-group"
        onChange={[Function]}
      >
        <input
          autoComplete="new-password"
          className="register__login__inputs form-control"
          id="confirmPassword"
          name="confirmPassword"
          placeholder="Confirm password"
          type="password"
        />
      </div>
    </div>
    <div
      className="form-group"
    >
      <button
        className="login_register__submit__button btn btn-primary btn-md btn-pill"
        name="submit"
        onClick={[Function]}
        type="button"
      >
        Submit
      </button>
    </div>
  </form>
  <div>
    <div
      className="form__seperator"
    >
      <hr
        className="form__horizontal__line"
      />
      Or
      <hr
        className="form__horizontal__line"
      />
    </div>
    <div>
      <h6>
        Have an account?
      </h6>
      <button
        className="form__toggle btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        👋 Log in to your account.
      </button>
    </div>
  </div>
</div>
`;
